trying to fix alignment

--- a/css/index.css
+++ b/css/index.css
@@ -89,7 +89,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  justify-content: center;
+  align-items: center;
   height: 400px;
   gap: 5px;
 }
@@ -101,7 +101,7 @@ body {
   display: flex;
   flex-direction: row;
   width: 100%;
-  justify-content: center;
+  align-items: center;
   height: 200px;
   gap: 5px;
 }
